enlaces en scss

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -12,7 +12,7 @@ $text-font: "Raleway", sans-serif;
 }
 
 body {
-  background: url("/images/bg-space.jpg");
+  background: url("./images/bg-space.jpg");
   min-width: 100%;
   background-size: 100% 100%;
   background-repeat: repeat;
