--- a/scss/_body-astrologia.scss
+++ b/scss/_body-astrologia.scss
@@ -7,9 +7,9 @@
 }
 
 .carousel__item--backgorund-img2 {
-  background-image: url("./images/carrousel2.jpg");
+  background-image: url("/images/carrousel2.jpg");
 }
 
 .carousel__item--backgorund-img3 {
-  background-image: url("./images/carrousel3.jpg");
+  background-image: url("/images/carrousel3.jpg");
 }
