--- a/scss/_body-astrologia.scss
+++ b/scss/_body-astrologia.scss
@@ -1,5 +1,5 @@
 .carousel-item {
-  background-image: url("./images/carrousel1.jpg");
+  background-image: url("../images/carrousel1.jpg");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -7,9 +7,9 @@
 }
 
 .carousel__item--backgorund-img2 {
-  background-image: url("/images/carrousel2.jpg");
+  background-image: url("../images/carrousel2.jpg");
 }
 
 .carousel__item--backgorund-img3 {
-  background-image: url("/images/carrousel3.jpg");
+  background-image: url("../images/carrousel3.jpg");
 }
