--- a/css/style.css
+++ b/css/style.css
@@ -11524,7 +11524,7 @@ body {
   margin: 15px;
   border: solid 1px #f898cc;
   color: white;
-  width: 50%;
+  width: 150px;
 }
 
 .button--style:hover {
@@ -11893,6 +11893,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  width: 150px;
 }
 
 @media only screen and (min-width: 992px) {
