--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -49,7 +49,7 @@ body {
   margin: 15px;
   border: solid 1px $principal-pink;
   color: white;
-  width: 50%;
+  width: 150px;
 }
 
 .button--style:hover {
