--- a/css/style.css
+++ b/css/style.css
@@ -11534,7 +11534,7 @@ body {
 
 @media only screen and (min-width: 768px) {
   .button--style {
-    width: 30%;
+    width: 200px;
   }
 }
 
@@ -11894,6 +11894,12 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   width: 150px;
+}
+
+@media only screen and (min-width: 768px) {
+  .tarot-cards__button {
+    width: 200px;
+  }
 }
 
 @media only screen and (min-width: 992px) {
