--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -33,6 +33,11 @@
   }
 }
 
+@media only screen and (min-width: 768px) {
+  .tarot-cards__button {
+    width: 200px;
+  }
+}
 @media only screen and (min-width: 992px) {
   .tarot-cards__button {
     width: 80%;
