--- a/css/style.css
+++ b/css/style.css
@@ -11540,7 +11540,7 @@ body {
 
 @media only screen and (min-width: 992px) {
   .button--style {
-    width: 20%;
+    width: 250px;
   }
 }
 
@@ -11904,7 +11904,7 @@ body {
 
 @media only screen and (min-width: 992px) {
   .tarot-cards__button {
-    width: 80%;
+    width: 250px;
   }
 }
 /*# sourceMappingURL=style.css.map */
