--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -59,12 +59,12 @@ body {
 
 @media only screen and (min-width: 768px) {
   .button--style {
-    width: 30%;
+    width: 200px;
   }
 }
 
 @media only screen and (min-width: 992px) {
   .button--style {
-    width: 20%;
+    width: 250px;
   }
 }
