--- a/css/style.css
+++ b/css/style.css
@@ -11897,13 +11897,13 @@ body {
 }
 
 @media only screen and (min-width: 768px) {
-  .tarot-cards__button {
+  .tarot-cards__container .tarot-cards__button {
     width: 200px;
   }
 }
 
 @media only screen and (min-width: 992px) {
-  .tarot-cards__button {
+  .tarot-cards__container .tarot-cards__button {
     width: 250px;
   }
 }
