--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -34,12 +34,12 @@
 }
 
 @media only screen and (min-width: 768px) {
-  .tarot-cards__button {
+  .tarot-cards__container .tarot-cards__button {
     width: 200px;
   }
 }
 @media only screen and (min-width: 992px) {
-  .tarot-cards__button {
+  .tarot-cards__container .tarot-cards__button {
     width: 250px;
   }
 }
