--- a/scss/_contact-form.scss
+++ b/scss/_contact-form.scss
@@ -4,17 +4,17 @@
   margin: auto;
 }
 
-// .input {
-//   width: 90%;
-//   font-family: "Raleway", sans-serif;
-//   font-size: 0.8rem;
-//   color: #f898cc;
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: stretch;
-//   margin: auto;
-// }
+.input {
+  width: 90%;
+  font-family: "Raleway", sans-serif;
+  font-size: 0.8rem;
+  color: #f898cc;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  margin: auto;
+}
 
 .input-group {
   display: flex;
