--- a/scss/_contact-form.scss
+++ b/scss/_contact-form.scss
@@ -7,22 +7,25 @@
 .input {
   width: 90%;
   font-family: "Raleway", sans-serif;
-  font-size: 0.8rem;
   color: #f898cc;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: stretch;
   margin: auto;
-}
+  padding: 3%;
+  font-size: 0.9rem;
 
-.input-group {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 10px;
-
-  .input-group__label {
-    margin-bottom: 4px;
+  .input-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3%;
+  }
+  .input-text {
+    font-family: "Raleway", sans-serif;
+    padding: 1.5%;
+    border-radius: 0.25rem;
+    background-color: transparentize($color: white, $amount: 0.3);
   }
 }
 
