--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,7 +2,6 @@ $nav-link-color: white;
 
 .main-nav {
   border-bottom: solid 1px $principal-pink;
- 
 
   .main-nav__logo__logo-text {
     font-family: $title-font;
@@ -17,7 +16,8 @@ $nav-link-color: white;
     .main-nav__logo__logo-text {
       font-size: 3.1rem;
     }
-  }}
+  }
+}
 
 .icon {
   display: none;
@@ -36,11 +36,11 @@ $nav-link-color: white;
 .hamburguer {
   display: block;
   width: 1.5rem;
-  height: .3rem;
+  height: 0.3rem;
   background: $nav-link-color;
   position: absolute;
-  top: .6rem;
-  transition: all .3s ease-in-out;
+  top: 0.6rem;
+  transition: all 0.3s ease-in-out;
 }
 
 .hamburguer:before,
@@ -56,21 +56,21 @@ $nav-link-color: white;
 }
 
 .hamburguer:after {
-  top: .6rem;
+  top: 0.6rem;
 }
 
-.toggle:checked + .icon>.hamburguer {
+.toggle:checked + .icon > .hamburguer {
   background: $principal-pink;
   transform: rotate(45deg);
 }
 
-.toggle:checked + .icon>.hamburguer:before {
+.toggle:checked + .icon > .hamburguer:before {
   background: $principal-pink;
   top: 0;
   transform: rotate(90deg);
 }
 
-.toggle:checked + .icon>.hamburguer:after {
+.toggle:checked + .icon > .hamburguer:after {
   background: $principal-pink;
   top: 0;
   transform: rotate(90deg);
@@ -102,7 +102,7 @@ nav {
 }
 
 .menu__link {
-  font-family: "Raleway", sans-serif;
+  font-family: $text-font;
   font-weight: normal;
   font-size: 1rem;
   text-transform: capitalize;
@@ -115,31 +115,30 @@ nav {
   color: $principal-pink;
 }
 
-
-
-
 @media only screen and (max-width: 600px) {
   .icon {
     display: inline-block;
   }
-  
+
   nav {
     padding: 0.4rem;
   }
-  
+
   .menu {
     display: none;
     width: 100%;
   }
-  
+
   .menu__item {
     width: 100%;
   }
-  
-  .menu, .menu__link {
+
+  .menu,
+  .menu__link {
     width: 100%;
   }
-  
+
   .toggle:checked ~ .menu {
     display: block;
-  }}
+  }
+}
