--- a/scss/_body-astrologia.scss
+++ b/scss/_body-astrologia.scss
@@ -2,6 +2,10 @@
   opacity: 0.75;
 }
 
+.carousel-text {
+  font-family: $text-font;
+}
+
 @media only screen and (min-width: 992px) {
   .carousel-item {
     height: 40vh;
