--- a/scss/_contact-form.scss
+++ b/scss/_contact-form.scss
@@ -6,8 +6,8 @@
 
 .input {
   width: 90%;
-  font-family: "Raleway", sans-serif;
-  color: #f898cc;
+  font-family: $text-font;
+  color: $principal-pink;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -22,10 +22,10 @@
     margin-bottom: 3%;
   }
   .input-text {
-    font-family: "Raleway", sans-serif;
+    font-family: $text-font;
     padding: 1.2%;
     border-radius: 0.25rem;
-    background-color: transparentize($color: white, $amount: 0.3);
+    background-color: transparentize($color: white, $amount: 0.35);
   }
 }
 
