--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,7 +1,7 @@
 .rrss-nav {
   margin-top: 10px;
   background-color: transparent;
-  border-top: solid 1px #f898cc;
+  border-top: solid 1px $principal-pink;
   margin: auto;
 
   .rrss-nav__list {
